# faster-whisper-frontend

./: .gitignore  README.md  WINDOWS-PORT-AND-PACKAGING.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.forgejo/workflows/: ci.yml  mirror-gh-releases.yml  release.yml
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
docs/brand/: README.md  gen-logo-svg.py  lockup.html  logo.html
docs/ci/: windows-runner-setup.md
scripts/: version.mjs
src/: App.tsx  Overlay.tsx  QuickAdd.tsx  app.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: atspi_guard.rs  chord_engine.rs  commands.rs  evdev_hotkeys.rs  held_keys.rs  inject.rs  key_debounce.rs  kwin.rs  lib.rs  main.rs  overlay.rs  quickadd.rs  session.rs  sound.rs  tray.rs  triggers.rs  virtual_keyboard.rs  wayland_inject.rs  win_focus.rs  win_hotkeys.rs
src-tauri/src/audio/: capture.rs  device.rs  mod.rs  resample.rs
src-tauri/src/config/: mod.rs  sync_state.rs
src-tauri/src/transport/: batch.rs  discovery.rs  mod.rs  pipeline.rs  stream.rs  sync.rs
src/components/: BackendChips.tsx  Combobox.tsx  DecodeFields.tsx  HotkeyCaptureControl.tsx  HotkeyChips.tsx  OverrideProfilePicker.tsx  ReorderControls.tsx  SetupChecklist.tsx  Sidebar.tsx  UsageStats.tsx  Waveform.tsx  ui.tsx
src/lib/: api.ts  arr.ts  backends.ts  cn.ts  conflicts.ts  dictation.ts  dictationVisual.ts  exportImport.ts  format.ts  keyboardLayout.ts  keys.ts  languages.ts  overlay.ts  paste.ts  persistence.ts  pipelineMap.ts  platform.ts  prideFlag.ts  profileTag.ts  ruleColor.ts  sanitize.ts  screens.tsx  serverKind.ts  speaking.ts  starters.ts  store.ts  streaming.ts  sync.ts  syncTypes.ts  theme.ts  types.ts  usage.ts  useHotkeyCapture.ts  useOverrideContext.ts
src/screens/: AppRules.tsx  Backends.tsx  Dictionary.tsx  Home.tsx  Onboarding.tsx  Profiles.tsx  Settings.tsx  SettingsSync.tsx  SpeechModels.tsx  Statistics.tsx  Transcribe.tsx
