[package]
name = "faster-whisper-frontend"
version = "0.1.20"
description = "A FOSS cross-platform dictation client for a self-hosted faster-whisper server"
authors = ["faster-whisper-frontend contributors"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "faster_whisper_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Route CLI trigger flags (e.g. a DE-bound shortcut → `app --toggle`) to the
# already-running instance. Must be registered first.
tauri-plugin-single-instance = "2"
# In-app global hotkeys (Windows / Linux-X11; no-op on native Wayland).
tauri-plugin-global-shortcut = "2"
# "Open at login": .desktop autostart entry (Linux) / registry / LaunchAgent.
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for the backend (batch transcription + model discovery). rustls to
# avoid a system OpenSSL dependency.
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls-no-provider"] }
# reqwest 0.13 renamed `rustls-tls` -> `rustls`, and that new feature brings the
# aws-lc-rs provider (a C/NASM native build the Windows runner lacks, and a second
# crypto stack beside the ring that tokio-tungstenite already uses). So: TLS with
# NO bundled provider, plus an explicit direct dep on rustls/ring; lib.rs installs
# ring as the process-wide provider at startup. One provider, no native toolchain.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Microphone capture (ALSA/PipeWire on Linux, WASAPI on Windows).
cpal = "0.17"

# Synthesised start/stop/error cues, played from Rust so they fire for
# hotkey-triggered dictations (the WebView would block autoplay). Uses the same
# cpal 0.17 backend; no audio assets to bundle. default-features off drops the
# media decoders we don't need; `playback` brings back the cpal output path
# (rodio 0.22 made it optional). cpal is capped at 0.17 in Cargo.toml AND in
# renovate.json until a rodio release accepts cpal 0.18 -- a lone cpal bump
# past rodio's requirement puts two audio backends in the binary.
rodio = { version = "0.22", default-features = false, features = ["playback"] }

# Streaming dictation: resample to 16 kHz + WebSocket to the backend.
rubato = "0.16"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Human-readable local timestamps for saved-recording filenames (already in the lock tree).
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config + identifiers + concurrency
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

# Secure API-key storage in the OS secret store. HELD AT 3 (see renovate.json):
# the keyring 4 "v1" migration broke API-key reads INSIDE the running app on
# KDE/Plasma -- every streaming connect went out without Authorization and the
# backend 403'd (shipped broken as v0.1.10, reverted in v0.1.11). Subtle part:
# a standalone test binary read the same wallet entries fine, so the failure is
# specific to the app's async environment (atspi switches zbus to the tokio
# reactor process-wide; keyring 4's Linux store is zbus-based, while keyring 3's
# sync-secret-service speaks libdbus directly and is immune). Before retrying 4:
# reproduce a keys::get() inside a running tokio runtime + spawn_blocking, and
# consider pinning the store's rt-tokio feature. Costs of staying on 3:
# dbus-secret-service -> libdbus-sys (a system lib) stays in the Linux tree.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
enigo = "0.6.1"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }

# Linux-only: XDG RemoteDesktop portal for native Wayland text injection (KWin
# accepts NotifyKeyboardKeysym directly — no libei/EIS needed).
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", features = ["remote_desktop", "screencast"] }
xkbcommon = "0.9.0"
# dlopen only — query the active XKB group (X11 XkbGetState) so multi-layout direct-typing uses the
# live layout, not always group 0. libX11 stays an OPTIONAL runtime dep (never a build/link requirement).
libc = "0.2"
# Opt-in hardware hotkey backend (reads /dev/input; needs the `input` group).
evdev = { version = "0.13", features = ["tokio"] }
# Reach the overlay's GDK window to shape its mouse input region to just the
# visible chip (so the rest of the transparent strip stays click-through while
# the chip itself becomes hoverable). Pinned to tao/wry's gtk; use its `gdk` /
# `cairo` re-exports so the ABI matches.
gtk = "0.18"

# Native-Wayland virtual keyboard (zwp_virtual_keyboard_v1) for layout-/Caps-Lock-
# independent direct typing on KWin/wlroots: we upload our own one-shot keymap so the
# typed text is exactly the transcript regardless of the active layout or Caps Lock.
# Absent on GNOME → falls back to the portal path (wayland_inject.rs). `memfd` carries
# the keymap fd to the compositor.
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
memfd = "0.6"

# Focused-app + field-editability detection via AT-SPI (the accessibility bus). Powers
# per-app rules, the chip's target readout, and the opt-in "deep field detection" guard.
# org_kde_plasma_window_management is privileged/blacklisted for normal clients on KWin,
# so AT-SPI is the portable path: app identity from get_application().name(), editability
# from the EDITABLE state. `tokio` switches zbus to our async reactor; `zbus` re-exports
# zbus so we can flip the org.a11y.Status flag. Apps not on the a11y bus → editable=None
# → callers degrade to typing (the guard is positive-only).
# p2p is a DEFAULT feature of atspi-connection, and atspi's `connection` feature pulls
# atspi-connection WITH its defaults — so the only way to drop p2p is to NOT use atspi's `connection`
# feature and depend on atspi-connection directly with default-features=false. WHY drop p2p: it makes
# AccessibilityConnection::new() open a direct peer connection to EVERY app on the a11y bus; on a
# busy/populated bus one unresponsive app hangs the whole connect → the focus listener never starts →
# no app detection except our own window (the "this app only" symptom). The bus-routed path is robust.
atspi = { version = "0.30", default-features = false, features = ["proxies", "wrappers", "tokio", "zbus"] }
atspi-connection = { version = "0.14", default-features = false, features = ["wrappers"] }

# Windows-only: the hybrid hotkey backend (win_hotkeys.rs — raw input + a
# re-armed observation hook, so modifier-only/L-R/N-key chords work and survive a
# focused RDP client's keyboard capture) and the foreground-app tracker
# (win_focus.rs — per-app rules + the chip's target readout; Accessibility is
# where SetWinEventHook lives). windows-sys 0.60 is already in the dependency
# tree (via Tauri), so this adds no new crate version.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# NOTE: `time` is pinned to 0.3.47 in Cargo.lock. time 0.3.48 introduced a trait
# impl that collides (E0119) with `cookie` 0.18.1 (a transitive Tauri dep). Do not
# `cargo update -p time` past 0.3.47 until Tauri bumps `cookie`.
[lints.rust]
unused_crate_dependencies = "allow"
